# py_embed

./: .gitignore  CMakeLists.txt  README.md  addition.py  build_mingw.bat  test.py
debug/: memcheck.sh
include/: py_embed.h
src/: py_embed.c  test.c
